2004-10-19  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/Object/clone.java:
	Moved OutOfMemoryError test to new file (oom.java)
	* gnu/testlet/java/lang/Object/oom.java:
	New file for OutOfMemoryError test.

2004-10-17  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/geom/Arc2D/Double/clone.java: New test.
	* gnu/testlet/java/awt/geom/Arc2D/Float/clone.java: Likewise.
	* gnu/testlet/java/awt/geom/Arc2D/clone.java: Removed.

2004-10-17  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/util/Date/range.java
	(test): Corrected two reference values.

2004-10-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/javax/swing/SpinnerListModel/
	(ArrayModel.java): New class of tests for creating a model from an array
	(Constructors.java): New class of tests for the model's constructors
	(ListModel.java): New class of tests for creating a model from a list
	(Ordering.java): New class of tests for the ordering of elements in a model
	(SetList.java): New class of tests for setting the list of an existing model

2004-10-15  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	constructors.java: New test.
	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	createCompatibleSampleModel.java: Likewise.
	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	createSubsetSampleModel.java: Likewise.
	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/equals.java:
	Likewise.
	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	getBitMasks.java: Likewise.
	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	getBitOffsets.java: Likewise.
	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	getDataElements.java: Likewise.
	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	getNumDataElements.java: Likewise.
	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	getOffset.java: Likewise.