@@ -1,0 +1,47 @@
+// Tags: JDK1.4
+
+// Copyright (C) 2004 David Gilbert <david.gilbert@object-refinery.com>
+
+// Mauve is free software; you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 2, or (at your option)
+// any later version. 
+
+// Mauve is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License
+// along with Mauve; see the file COPYING.  If not, write to
+// the Free Software Foundation, 59 Temple Place - Suite 330,
+// Boston, MA 02111-1307, USA.  */
+
+package gnu.testlet.java.awt.BasicStroke;
+
+import gnu.testlet.TestHarness;
+import gnu.testlet.Testlet;
+
+import java.awt.BasicStroke;
+
+/**
+ * Verifies constant values for the {@link BasicStroke} class.
+ */
+public class constants implements Testlet {
+
+  /**
+   * Runs the test using the specified harness.
+   * 
+   * @param harness  the test harness (<code>null</code> not permitted).
+   */
+  public void test(TestHarness harness)      
+  {
+    harness.check(BasicStroke.CAP_BUTT == 0);
+    harness.check(BasicStroke.CAP_ROUND == 1);
+    harness.check(BasicStroke.CAP_SQUARE == 2);
+    harness.check(BasicStroke.JOIN_BEVEL == 2);
+    harness.check(BasicStroke.JOIN_MITER == 0);
+    harness.check(BasicStroke.JOIN_ROUND == 1);
+  }
+
+}
